LU-16489 obdclass: handle LLOG_SKIP_PLAIN on client builds

Commit 2ed9e1bcf762 ("LU-14291 obdclass: unwind server code out of
llog cat code") moved the LLOG_SKIP_PLAIN handling in
llog_cat_process_cb() into the CONFIG_LUSTRE_FS_SERVER only
section. On client builds the conversion to zero is now compiled
out, so the LLOG_SKIP_PLAIN value returned by a plain llog
processing callback, e.g. chlg_read_cat_process_cb() skipping a
fully consumed plain llog via llog_is_plain_skipable(), is passed
up to the catalog level llog_process_thread(), which stops
processing the whole catalog instead of continuing with the next
plain llog. llog_cat_process() then returns the positive
LLOG_SKIP_PLAIN value, which callers like chlg_load() do not treat
as an error.

As a result a client side changelog reader that starts at a record
beyond the end of the first plain llog of the changelog catalog
silently receives no records at all. lustre_rsync then reports
"Changelog records consumed: 0" and misses all pending changes,
causing the frequent lustre-rsync-test test_2c "Failure in
replication; differences found" failures seen since the patch
landed.

Move the LLOG_SKIP_PLAIN check out of the server-only section
again; skipping a plain llog is client functionality. The
LLOG_DEL_PLAIN / LLOG_DEL_RECORD handling stays server-only since
llog_cat_cleanup() modifies the catalog.

Assisted-by: ClaudeCode:Fable-5 llm_code_and_review_tools
Test-Parameters: testlist=lustre-rsync-test env=ONLY=2c,ONLY_REPEAT=100
Test-Parameters: testlist=lustre-rsync-test env=ONLY=2c,ONLY_REPEAT=100 fstype=zfs
Fixes: 2ed9e1bcf762 ("LU-14291 obdclass: unwind server code out of llog cat code")
Signed-off-by: Marc Vef <mvef@whamcloud.com>
Change-Id: I124d7ecb1fcd8e642b0d960fd708c9728e0563dd
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/67221
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Timothy Day <timday@thelustrecollective.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>